<?xml version="1.0" encoding="utf-8"?>
<!--

    Geekttrss is a RSS feed reader application on the Android Platform.

    Copyright (C) 2017-2021 by Frederic-Charles Barthelery.

    This file is part of Geekttrss.

    Geekttrss is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Geekttrss is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Geekttrss.  If not, see <http://www.gnu.org/licenses/>.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/articles_search"
            android:icon="@drawable/ic_search_24dp"
            app:iconTint="?colorControlNormal"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/articles_sort_order"
        android:icon="@drawable/ic_baseline_sort_24"
        app:iconTint="?colorControlNormal"
        android:title="@string/sort_order"
        app:showAsAction="always" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/articles_sort_order_most_recent"
                    android:title="@string/sort_order_most_recent_first"
                    />
                <item android:id="@+id/articles_sort_order_oldest"
                    android:title="@string/sort_order_oldest_first"
                    />
            </group>
        </menu>
    </item>
</menu>
