<?xml version="1.0" encoding="utf-8"?>
<!--

    Geekttrss is a RSS feed reader application on the Android Platform.

    Copyright (C) 2017-2021 by Frederic-Charles Barthelery.

    This file is part of Geekttrss.

    Geekttrss is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Geekttrss is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Geekttrss.  If not, see <http://www.gnu.org/licenses/>.

-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/articles_list"
        app:startDestination="@id/articlesListFragment">

    <action android:id="@+id/action_show_settings"
        app:destination="@id/settingsActivity" />
    <action android:id="@+id/action_manage_feeds"
        app:destination="@id/manageFeedsActivity" />

    <action android:id="@+id/action_search_article"
        app:destination="@id/articlesSearchFragment" />

    <fragment android:id="@+id/magazineFragment"
        android:name="com.geekorum.ttrss.articles_list.magazine.MagazineFragment"
        android:label="@string/title_magazine"
        >
        <action android:id="@+id/action_show_article"
            app:destination="@id/articleDetailActivity"/>
    </fragment>

    <fragment android:id="@+id/articlesListFragment"
            android:name="com.geekorum.ttrss.articles_list.ArticlesListFragment"
            android:label="@string/label_feed_name" >
        <argument android:name="feed_id" android:defaultValue="-4L" app:argType="long" />
        <argument android:name="feed_name" android:defaultValue="All articles" app:argType="string" />

        <action android:id="@+id/action_show_article"
                app:destination="@id/articleDetailActivity"/>
        <action
            android:id="@+id/action_show_tag"
            app:destination="@id/articlesListByTagFragment"
            app:popUpTo="@id/articlesListByTagFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment android:id="@+id/articlesListByTagFragment"
        android:name="com.geekorum.ttrss.articles_list.ArticlesListByTagFragment"
        android:label="@string/label_tag" >
        <argument android:name="tag" app:argType="string" />

        <action android:id="@+id/action_show_article"
            app:destination="@id/articleDetailActivity"/>
        <action
            android:id="@+id/action_show_tag"
            app:destination="@id/articlesListByTagFragment"
            app:popUpTo="@id/articlesListByTagFragment"
            app:popUpToInclusive="true" />

    </fragment>


    <fragment android:id="@+id/articlesSearchFragment"
            android:name="com.geekorum.ttrss.articles_list.search.ArticlesSearchFragment"
            android:label="@string/title_article_search" >
        <action android:id="@+id/action_show_article"
                app:destination="@id/articleDetailActivity"/>
    </fragment>

    <activity android:id="@+id/articleDetailActivity"
            android:name="com.geekorum.ttrss.article_details.ArticleDetailActivity"
            android:label="@string/title_article_details"
            app:action="android.intent.action.VIEW"
            app:dataPattern="@string/article_details_data_pattern"
            >
        <argument android:name="article_id" app:argType="long" />
    </activity>

    <activity android:id="@+id/settingsActivity"
            android:name="com.geekorum.ttrss.settings.SettingsActivity"
            android:label="@string/activity_settings_title"
            tools:layout="@layout/activity_settings" />

    <action android:id="@+id/action_show_feed"
            app:destination="@id/articlesListFragment"
            app:popUpTo="@id/articlesListFragment"
            app:popUpToInclusive="true"/>

    <action android:id="@+id/action_show_magazine"
        app:popUpTo="@id/magazineFragment"
        />

    <activity android:id="@+id/manageFeedsActivity"
        android:name="com.geekorum.ttrss.manage_feeds.ManageFeedsActivity"
        app:moduleName="manage_feeds"
        tools:layout="@layout/activity_manage_feeds"
        />

</navigation>
