<?xml version="1.0" encoding="utf-8"?>
<!--

    Geekttrss is a RSS feed reader application on the Android Platform.

    Copyright (C) 2017-2018 by Frederic-Charles Barthelery.

    This file is part of Geekttrss.

    Geekttrss is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Geekttrss is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Geekttrss.  If not, see <http://www.gnu.org/licenses/>.

-->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.geekorum.ttrss.accounts.LoginViewModel" />
        <variable name="viewModel" type="com.geekorum.ttrss.accounts.LoginViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/activity_login_account">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/login_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="url_field,username_field,password_field,email_sign_in_button" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/url_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="320dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_url"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:text="@={LoginViewModel.convertHttpUrlToString(viewModel.httpUrl)}"
                        android:afterTextChanged="@{viewModel::checkValidUrl}"
                        android:enabled="@{viewModel.canChangeUsernameOrUrl}"
                        android:autofillHints="text"
                        tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/url_field"
                    app:layout_constraintEnd_toEndOf="@+id/url_field"
                    app:layout_constraintTop_toBottomOf="@+id/url_field"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="@={viewModel.username}"
                        android:afterTextChanged="@{viewModel::checkNonEmptyUsername}"
                        android:enabled="@{viewModel.canChangeUsernameOrUrl}"
                        android:autofillHints="username"
                        tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/url_field"
                    app:layout_constraintEnd_toEndOf="@+id/url_field"
                    app:layout_constraintTop_toBottomOf="@+id/username_field"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@integer/ime_action_done"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viewModel.password}"
                        android:afterTextChanged="@{viewModel::checkNonEmptyPassword}"
                        android:onEditorAction="@{(view, actionId, keyEvent) -> viewModel.confirmLogin(actionId)}"
                        android:autofillHints="password"
                        tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/url_field"
                    app:layout_constraintEnd_toEndOf="@+id/url_field"
                    app:layout_constraintTop_toBottomOf="@+id/password_field"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:enabled="@{safeUnbox(viewModel.areFieldsCorrect)}"
                    android:onClickListener="@{() -> viewModel.confirmLogin()}"
                    />

            <!-- Login progress -->
            <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

